Updated changes to include database changes for User Bundle.
Removed Security Controller to stop over laying FOS Security Controller.
Updated MenuBuilder to determine user logged in status.
Updated config to include jms and DI security changes.
Updated routing to include console as base URL in routes.
Updated security to use database access.
Included csrf field on login form.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -29,6 +29,16 @@ services:
         tags:
             - { name: knp_menu.menu, alias: rightmenu }
 
+# JMS Security
+jms_security_extra:
+    secure_all_services: true
+
+jms_di_extra:
+    locations:
+        all_bundles: false
+        bundles: [ConsoleBundle]
+        directories: ["%kernel.root_dir%/../src"]
+
 # FOS UserBundle
 fos_user:
     db_driver: orm
