--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -1,7 +1,6 @@
 security:
     encoders:
         Manhattan\Bundle\ConsoleBundle\Entity\User: sha512
-        #"FOS\UserBundle\Model\UserInterface": sha512
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
@@ -12,27 +11,24 @@ security:
             id: fos_user.user_manager
 
     firewalls:
-       # dev:
-          # pattern: ^/(_(profiler|wdt)|css|images|js)/
-          # security: false
-
-       # login:
-         # pattern: ^/login$
-         # security: false
+        dev:
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
 
         secured_area:
-            pattern: ^/
+            pattern: ^/console(.*)
             form_login:
-                check_path: /login_check
-                login_path: /login
-                provider: fos_userbundle
+                provider:       fos_userbundle
+                csrf_provider:  form.csrf_provider
+                login_path:     /console/login
+                check_path:     /console/login_check
             logout:
-                path: /logout
-                target: /
-            anonymous: ~
+                path:           /console/logout
+                target:         /console
+            anonymous:    ~
 
     access_control:
-       # - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-       # - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-       # - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/console/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/console/register, role: ROLE_ADMIN }
+        - { path: ^/console/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/console/admin/, role: ROLE_ADMIN }
